-created a gridlayout in the site-branding div in order to house other divs within this container such as .site-logo and title-and-description -added styling to title-and-description -capped image height of site-logo to 100px to ensure that when a logo is uploaded, it doesn't stretch header -adjusted margin values for p in _copy.scss also to prevent header from being stretched

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -9,10 +9,40 @@ body {
 	flex-direction: column;
 	background-color: $color__background-body;
 
+	.site-branding {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr); /* Three columns with equal width */
+		grid-template-rows: auto; /* Single row */
+		padding: 10px;
+		align-items: center; /* Align items vertically */
+
+		.site-logo{
+			max-width: fit-content;
+		}
+		
+		.site-logo img{
+			max-height: 100px;
+			max-width: max-content;
+		}
+		.title-and-description {
+			grid-column: 2; /* Place the title and description in the second column */
+			text-align: center; /* Center align the title and description */
+			}
+			.site-title {
+			font-size: 30px;
+			text-align: center;
+			}
+		
+			.site-description {
+			font-size: 20px; /* Adjust as needed */
+			text-align: center;
+			}	  
+		}
+
 	.site-header{
 		background-color: $color_background-header;
 	}
-	
+
 	.site-footer{
 		height: 100px;
 		display: flex;
