--- a/sass/base/typography/_copy.scss
+++ b/sass/base/typography/_copy.scss
@@ -1,5 +1,11 @@
 p {
-	margin-bottom: 1.5em;
+	margin: 10px;
+	.site-title{
+		
+	}
+	.site-description{
+		
+	}
 }
 
 dfn,
